name:                hscommonmark
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hscommonmark#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CommonMark
                       CommonMark.Types
                       CommonMark.Parser
                       CommonMark.BlockParser
                       CommonMark.InlineParser
                       CommonMark.Util
                       CommonMark.Lexer
  if impl(ghc < 7.10)
     hs-source-dirs:   prelude
     other-modules:    Prelude
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers >= 0.5.9
                     , syb
                     , split
                     , rosezipper
                     , tagsoup
                     , parsec
                     , mtl
                     , case-insensitive
  default-language:    Haskell2010

executable hscommonmark
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hscommonmark
                     , text
                     , bytestring
  if impl(ghc < 7.10)
     hs-source-dirs:   prelude
     other-modules:    Prelude
  default-language:    Haskell2010

test-suite hscommonmark-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hscommonmark
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , quickcheck-text
                     , text
                     , rosezipper
                     , containers
  if impl(ghc < 7.10)
     hs-source-dirs:   prelude
     other-modules:    Prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hscommonmark
